--- a/main/templates/main_home.html
+++ b/main/templates/main_home.html
@@ -79,9 +79,9 @@
                 저는 노션을 소스 코드 문서 관리 도구로 사용하고, 깃허브는 코드 버전 관리를 위해 활용했습니다. 또한, AI Project는 제가 미국 매사추세츠 대학교 수업 프로젝트에서 진행한 작업과 관련되어 있습니다.
             </p>
             <div class="btn-group-horizontal">
-                <a href="" class="btn btn-dark btn-lg">Notion</a>
-                <a href="" class="btn btn-light btn-lg border border-secondary">GitHub</a>
-                <a href="" class="btn btn-primary btn-lg">AI Project</a>
+                <a href="https://able-fragrance-2c9.notion.site/a383a66c8ec84954af9df857d289b64c?v=49cc3fb120994439b43a38ccf0c02ee9" class="btn btn-dark btn-lg">Notion</a>
+                <a href="https://github.com/EunbiYoon" class="btn btn-light btn-lg border border-secondary">GitHub</a>
+                <a href="https://drive.google.com/drive/folders/1eSq6qVGER29xjTCMyuXTjwxcl1tXTdOj?usp=sharing" class="btn btn-primary btn-lg">AI Project</a>
             </div>
         </div>
     </div>
